objects/aqi_ltng_mng__Article_Quality__c.object
<CustomObject>
    <description>Following the KCS methodology, each record captures article quality review results that can be summarized to measure overall Knowledge quality.</description>
    <fields>
        <fullName>aqi_ltng_mng__AQ_Score__c</fullName>
        <label>AQI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Action_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coaching Provided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Articles_Quality3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Action_Date__c</fullName>
        <label>Date Coaching Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Action_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coaching Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Action_Taken__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Article Archived</fullName>
                </value>
                <value>
                    <fullName>Article Updated</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Contributor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Articles_Quality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Art_Meets_Content_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article meets content standard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__ArticleFirstPublishedDate__c</fullName>
        <description>Article First Published Date</description>
        <label>Article First Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Quality_Index</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Created_Date__c</fullName>
        <label>Article Version Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Link__c</fullName>
        <label>Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Number__c</fullName>
        <label>Article Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Unique?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Article_Version__c</fullName>
        <label>Article Version</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Content_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Content_Understandable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content understandable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Internal_Notes__c</fullName>
        <label>Coaching Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Knowledge_Article_Id__c</fullName>
        <label>Knowledge Article</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Knowledge_Article_Version_Id__c</fullName>
        <label>Knowledge Article Version</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Articles_Quality2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Last_Modified_Date__c</fullName>
        <label>Article Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Last_Published_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Last Published By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Articles_Quality1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Last_Published_Date__c</fullName>
        <label>Article Last Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Links_In_Article_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Links in article valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Possible_Points__c</fullName>
        <label>Possible Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Properties_Set_Appropriately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Properties set appropriately?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aqi_ltng_mng__Title_Accurate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Accurate?</label>
        <type>Checkbox</type>
    </fields>
    <label>Article Quality Index</label>
    <listViews>
        <fullName>aqi_ltng_mng__All</fullName>
        <columns>NAME</columns>
        <columns>aqi_ltng_mng__Knowledge_Article_Version_Id__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>aqi_ltng_mng__Agent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>aqi_ltng_mng__Coaching_Needed</fullName>
        <columns>NAME</columns>
        <columns>aqi_ltng_mng__Article_Title__c</columns>
        <columns>aqi_ltng_mng__Article_Number__c</columns>
        <columns>aqi_ltng_mng__Article_Version__c</columns>
        <columns>aqi_ltng_mng__Agent__c</columns>
        <columns>aqi_ltng_mng__Action_Assigned_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>aqi_ltng_mng__Last_Modified_By__c</columns>
        <columns>aqi_ltng_mng__Last_Modified_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>aqi_ltng_mng__Action_Needed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>aqi_ltng_mng__Action_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Coaching Needed</label>
    </listViews>
    <nameField>
        <label>Article Quality Index Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Quality Index</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>aqi_ltng_mng__Agent_field_is_required</fullName>
        <active>true</active>
        <description>Agent field is required</description>
        <errorConditionFormula>ISBLANK( aqi_ltng_mng__Agent__c   )</errorConditionFormula>
        <errorDisplayField>aqi_ltng_mng__Agent__c</errorDisplayField>
        <errorMessage>You must  specify an Article Contributor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>aqi_ltng_mng__CheckActionProviderBy</fullName>
        <active>true</active>
        <errorConditionFormula>aqi_ltng_mng__Action_Needed__c &amp;&amp;  ISBLANK( aqi_ltng_mng__Action_Assigned_To__c )</errorConditionFormula>
        <errorMessage>A user must be assigned if the chekbox on the &apos;Follow Up&apos; section was selected.</errorMessage>
    </validationRules>
</CustomObject>